# ThirdPlace

./: .gitignore  .gitmodules  .replit  PULL_REQUEST_TEMPLATE.md  README.md  package-lock.json  package.json
.amazonq/rules/: instructions.md
.github/workflows/: build-elm.yml  build-java.yml
.llmrc/: INSTRUCTIONS.md  MEMORIES.md
.llms/: INSTRUCTIONS.md
contributing/: BACKEND_SETUP  BACKEND_SETUP.md  FRONTEND_SETUP  FRONTEND_SETUP.md
examples/: api_posts-create.json
tp-api/: build.gradle  settings.gradle
tp-backend/: build.gradle
tp-bootstrap-server/: Cargo.toml
tp-bootstrap-server/.llmrc/: INSTRUCTIONS.md
tp-bootstrap-server/docs/src/: SUMMARY.md  behavioral_requirements.md
tp-bootstrap-server/src/: behavior.rs  main.rs
tp-frontend/: PACKAGES.md  README.md  build.sh  elm.js  elm.json  index.html  ipfs.ts  libp2p-identity.js  loginstyles.css  orbitdb.ts  package-lock.json  package.json  ports.websocket.js  room.html  roomstyles.css  serve.sh  tpapp.js  tsconfig.json  vite.config.js
tp-frontend/.llmrc/: INSTRUCTIONS.md
tp-frontend/src/: ConversationStyles.elm  ConversationsView.elm  Identity.elm  Login.elm  LoginPage.elm  LoginStyles.elm  LoginView.elm  Main.elm  Posts.elm  Room.elm  RoomPage.elm  RoomStyles.elm  RoomUtils.elm  RoomView.elm  Router.elm  SignIn.elm  ThirdPlaceApp.elm  index.ts  (+2 more)
tp-relay/: .dockerignore  .gitignore  Dockerfile  README.md  build_and_run.sh  deploy.yaml  docker-compose.yml  localconf.env  package-lock.json  package.json  publish-addr.sh  publish-relay.sh  relay.js  relay.ts  tp-relay.ipfs.pvk  tsconfig.json
(+137 files in other folders)
