[package]
name = "tp-bootstrap-server"
version = "0.1.0"
edition = "2024"

[dependencies]
# Core dependencies
libp2p = { version = "0.55.0", features = ["tcp", "noise", "yamux", "websocket", "ping", "identify"] }
tokio = { version = "1.29", features = ["full"] }
futures = "0.3.28"
async-std = { version = "1.12.0", features = ["attributes"] }
env_logger = "0.11.8"
log = "0.4.19"

# For WebSocket server capabilities
warp = "0.3.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# For command-line arguments
clap = { version = "4.5.35", features = ["derive"] }